--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ Unearthed Arcana content can be accessed by cycling the &quot;All Sources&quot; 
 <!--5ETOOLS_SCRIPT_ANCHOR-->
 <!--5ETOOLS_AD_ADHESION-->
 
+<!--
 <script type="text/javascript" defer src="lib/jquery.js"></script>
 <script type="text/javascript" defer src="js/parser.js"></script>
 <script type="text/javascript" defer src="js/utils.js"></script>
@@ -272,6 +273,9 @@ Unearthed Arcana content can be accessed by cycling the &quot;All Sources&quot; 
 <script type="module" src="js/index.js"></script>
 <script type="text/javascript" defer src="js/list2.js"></script>
 <script type="text/javascript" defer src="lib/elasticlunr.js"></script>
+-->
+
+<script type="module" src="/src/main.ts"></script>
 
 </body>
 </html>
